--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,43 @@
     <link rel="stylesheet" href="/screen.css" />
   </head>
   <body>
-    <h1 class="hello-world"></h1>
+    <header>
+      <h1>My score Board</h1>
+    </header>
+    <main>
+      <section class="team1">
+        <h2 class="Team1Name">Team 1</h2>
+        <h3 class="Team1Points">0</h3>
+        <fieldset>
+          <input type="text" placeholder="Name" />
+          <button class="update-TeamName1-Button">Update</button>
+        </fieldset>
+
+        <fieldset>
+          <i
+            id="oneSubtractButton"
+            class="subtract fas fa-2x fa-minus-circle"
+          ></i>
+        </fieldset>
+      </section>
+
+      <section class="team2">
+        <h2 class="Team1Name">Team 2</h2>
+        <h3 class="Team1Points">0</h3>
+        <fieldset>
+          <input type="text" placeholder="Name" />
+          <button class="update-TeamName1-Button">Update</button>
+        </fieldset>
+
+        <fieldset>
+          <i
+            id="oneSubtractButton"
+            class="subtract fas fa-2x fa-minus-circle"
+          ></i>
+        </fieldset>
+      </section>
+      <button id="Reset">Reset</button>
+    </main>
     <script src="/main.js" charset="utf-8"></script>
   </body>
 </html>
